cmake_minimum_required(VERSION 3.21)
project(acm_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(acm_cpp main.cpp)

add_executable(Acwing97_the_sum_of_factors acwing_97_the_sum_of_factors.cpp)
add_executable(LuoguP2365_task_arrangement luogu_p2365_task_arrangement.cpp)
add_executable(acwing_102_best_cattle_pen acwing_102_best_cattle_pen.cpp)
add_executable(codeforces_1642_A codeforces_1642_A.cpp)
add_executable(codeforces_1642_B codeforces_1642_B.cpp)
add_executable(codeforces_1642_C codeforces_1642_C.cpp)
add_executable(nowcoder_practice_96_A nowcoder_practice_96_A.cpp)
add_executable(usaco_2022Feb_bronze_A usaco_2022Feb_bronze_A.cpp)
add_executable(usaco_2022Feb_bronze_B usaco_2022Feb_bronze_B.cpp)
add_executable(usaco_2022Feb_bronze_C usaco_2022Feb_bronze_C.cpp)