cmake_minimum_required(VERSION 3.21)
project(acm_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(acm_cpp main.cpp)

add_executable(Acwing97_the_sum_of_factors acwing_97_the_sum_of_factors.cpp)
add_executable(LuoguP2365_task_arrangement luogu_p2365_task_arrangement.cpp)
add_executable(acwing_102_best_cattle_pen acwing_102_best_cattle_pen.cpp)
add_executable(codeforces_1642_A codeforces_1642_A.cpp)
add_executable(codeforces_1642_B codeforces_1642_B.cpp)
add_executable(codeforces_1642_C codeforces_1642_C.cpp)
add_executable(nowcoder_practice_96_A nowcoder_practice_96_A.cpp)
add_executable(usaco_2022Feb_bronze_A usaco_2022Feb_bronze_A.cpp)
add_executable(usaco_2022Feb_bronze_B usaco_2022Feb_bronze_B.cpp)
add_executable(usaco_2022Feb_bronze_C usaco_2022Feb_bronze_C.cpp)
add_executable(luogu_p1638_exihibition_of_paintings luogu_p1638_exihibition_of_paintings.cpp)
add_executable(luogu_p7072_live_the_prize luogu_p7072_live_the_prize.cpp)
add_executable(infinite_series infinite_series.cpp)
add_executable(luogu_p2671_sum luogu_p2671_sum.cpp)
add_executable(luogu_p4147_palace luogu_p4147_palace.cpp)
add_executable(luogu_p2866_bad_hair_day_s luogu_p2866_bad_hair_day_s.cpp)
add_executable(2022AcmClass1_A 2022AcmClass1_A.cpp)
add_executable(2022AcmClass1_B 2022AcmClass1_B.cpp)
add_executable(2022AcmClass1_C 2022AcmClass1_C.cpp)
add_executable(2022AcmClass1_D 2022AcmClass1_D.cpp)
add_executable(2022AcmClass1_E 2022AcmClass1_E.cpp)
add_executable(2022AcmClass1_F 2022AcmClass1_F.cpp)
add_executable(2022AcmClass1_G 2022AcmClass1_G.cpp)
add_executable(2022AcmClass1_H 2022AcmClass1_H.cpp)
add_executable(2022AcmClass1_I 2022AcmClass1_I.cpp)
add_executable(2022AcmClass1_J 2022AcmClass1_J.cpp)
add_executable(2022AcmClass1_K 2022AcmClass1_K.cpp)
add_executable(2022AcmClass1_L 2022AcmClass1_L.cpp)
add_executable(2022AcmClass1_M 2022AcmClass1_M.cpp)
add_executable(2022AcmClass1_N 2022AcmClass1_N.cpp)
add_executable(2022AcmClass2_A 2022AcmClass2_A.cpp)
add_executable(2022AcmClass2_B 2022AcmClass2_B.cpp)
add_executable(2022AcmClass2_D 2022AcmClass2_D.cpp)
add_executable(2022AcmClass2_C 2022AcmClass2_C.cpp)
add_executable(2022AcmClass2_E 2022AcmClass2_E.cpp)
add_executable(2022AcmClass2_F 2022AcmClass2_F.cpp)
add_executable(2022AcmClass2_K 2022AcmClass2_K.cpp)
add_executable(2022AcmClass2_K_tab 2022AcmClass2_K_tab.cpp)
add_executable(2022AcmClass2_G 2022AcmClass2_G.cpp)
add_executable(2022AcmClass2_N 2022AcmClass2_N.cpp)
add_executable(2022AcmClass2_O 2022AcmClass2_O.cpp)
add_executable(test test.cpp)
add_executable(codeforces_1649_A codeforces_1649_A.cpp)
add_executable(codeforces_1649_B codeforces_1649_B.cpp)
add_executable(codeforces_1649_C codeforces_1649_C.cpp)
add_executable(codeforces_1647_A codeforces_1647_A.cpp)
add_executable(codeforces_1687_B codeforces_1687_B.cpp)
add_executable(thisPointer thisPointer.cpp)
add_executable(cpp_mooc_010 cpp_mooc_010.cpp)
add_executable(cpp_mooc_011 cpp_mooc_011.cpp)
add_executable(cpp_mooc_012 cpp_mooc_012.cpp)
add_executable(cpp_mooc_013 cpp_mooc_013.cpp)
add_executable(cpp_mooc_deepcopy cpp_mooc_handmakevector.cpp)
add_executable(cpp_mooc_overload_iostream cpp_mooc_overload_iostream.cpp)
add_executable(cpp_mooc_014 cpp_mooc_014.cpp)
add_executable(cpp_mooc_015 cpp_mooc_015.cpp)
add_executable(cpp_mooc_016 cpp_mooc_016.cpp)
add_executable(cpp_mooc_017 cpp_mooc_017.cpp)
add_executable(cpp_mooc_018 cpp_mooc_018.cpp)
add_executable(cpp_mooc_019 cpp_mooc_019.cpp)
add_executable(cpp_mooc_021 cpp_mooc_021.cpp)
add_executable(codeforces_1657_A codeforces_1657_A.cpp)
add_executable(codeforces_1657_B codeforces_1657_B.cpp)
add_executable(codeforces_1657_C codeforces_1657_C.cpp)
add_executable(abc245_a abc245_a.cpp)
add_executable(abc245_b abc245_b.cpp)
add_executable(abc245_c abc245_c.cpp)
add_executable(abc245_d abc245_d.cpp)
add_executable(abc245_e abc245_e.cpp)
add_executable(codeforces_1658_A codeforces_1658_A.cpp)
add_executable(codeforces_1658_B codeforces_1658_B.cpp)
add_executable(acwing_102_best_cow_fence acwing_102_best_cow_fence.cpp)
add_executable(abc246_a abc246_a.cpp)
add_executable(abc246_b abc246_b.cpp)
add_executable(abc246_c abc246_c.cpp)
add_executable(abc246_d abc246_d.cpp)
add_executable(tarjanTemplate tarjanTemplate.cpp)
add_executable(gauss gauss.cpp)
add_executable(dinic 2022PreSummer_Graph_A_dinic.cpp)
add_executable(2022PreSummer_Graph_B_Kruskal_Rebuilt_Tree 2022PreSummer_Graph_B_Kruskal_Rebuilt_Tree.cpp)
add_executable(2022PreSummer_Graph_C_double_oriented_BFS 2022PreSummer_Graph_C_double_oriented_BFS.cpp)
add_executable(2022PreSummer_Graph_toposort toposort.cpp)
add_executable(2022PreSummer_Graph_D_spfa 2022PreSummer_Graph_F_spfa_negtiveCycle.cpp)
add_executable(2022PreSummer_Graph_I_2-SAT 2022PreSummer_Graph_I_2-SAT.cpp)
add_executable(2022PreSummer_Graph_K_LCA 2022PreSummer_Graph_K_LCA.cpp)
add_executable(2022PreSummer_Graph_BCC 2022PreSummer_Graph_J_tarjan.cpp)
add_executable(2022PreSummer_Graph_L_MST_count 2022PreSummer_Graph_L_MST_count.cpp)
add_executable(2022PreSummer_Graph_AbsoluteCenter 2022PreSummer_Graph_N_AbsoluteCenter.cpp)
add_executable(2022PreSummer_Graph_O 2022PreSummer_Graph_O.cpp)
add_executable(2022PreSummer_Graph_Q 2022PreSummer_Graph_Q_CompleteGraphMST.cpp)
add_executable(2022PreSummer_Graph_C_magicGirl 2022PreSummer_Graph_C_magicGirl.cpp)
add_executable(2022PreSummer_Graph_S_BiGraph 2022PreSummer_Graph_S_BiGraph.cpp)
add_executable(test2 test2.cpp)
add_executable(Boruvka Graph_Boruvka.cpp)
add_executable(2022PreSummer_Graph_E_mergepoint 2022PreSummer_Graph_E_mergepoint.cpp)
add_executable(2022PreSummer_Graph_BCC_merge acwing_395.cpp)
add_executable(acwing_1183 acwing_1183.cpp)
add_executable(acwing_396 2022PreSummer_Graph_E_dccMerge.cpp)
add_executable(2022PreSummer_Graph_H_dcc 2022PreSummer_Graph_H_dcc.cpp)
add_executable(2022PreSummer_Graph_T_minimum_path_cover 2022PreSummer_Graph_T_minimum_path_cover.cpp)
add_executable(2022PreSummer_Graph_G_KM_algorithm 2022PreSummer_Graph_G_KM_algorithm.cpp)
add_executable(2022PreSummer_DS_I_DSU 2022PreSummer_DS_I_DSU.cpp)
add_executable(2022PreSummer_DS_B_SegTree 2022PreSummer_DS_B_SegTree.cpp)
add_executable(2022PreSummer_DS_D_Treap 2022PreSummer_DS_D_Treap.cpp)
add_executable(2022PreSummer_DS_L_MoDui 2022PreSummer_DS_L_MoDui.cpp)
add_executable(2022PreSummer_DS_J_LuanGao 2022PreSummer_DS_J_LuanGao.cpp)
add_executable(2022PreSummer_DS_Z_BlockList 2022PreSummer_DS_Z_BlockList.cpp)
add_executable(2022PreSummer_DS_BasicCDQ DS_BasicCDQ.cpp)
add_executable(2022PreSummer_DS_E_CDQ 2022PreSummer_DS_E_CDQ.cpp)
add_executable(2022PreSummer_DS_A_ST 2022PreSummer_DS_A_ST.cpp)
add_executable(codeforces_1673_A codeforces_1673_A.cpp)
add_executable(codeforces_1673_B codeforces_1673_B.cpp)
add_executable(codeforces_1673_C codeforces_1673_C.cpp)
add_executable(DS_ChairmanTree DS_ChairmanTree.cpp)
add_executable(2022PreSummer_DS_C_DynamicRankings 2022PreSummer_DS_C_DynamicRankings.cpp)
add_executable(2022PreSummer_IQ1_A 2022PreSummer_IQ1_A.cpp)
add_executable(2022PreSummer_IQ1_B 2022PreSummer_IQ1_B.cpp)
add_executable(2022PreSummer_IQ1_D K.cpp)
add_executable(2022PreSummer_IQ1_C 2022PreSummer_IQ1_C.cpp)
add_executable(2022PreSummer_IQ1_B2 2022PreSummer_IQ1_B2.cpp)
add_executable(codeforces_1674_A codeforces_1674_A.cpp)
add_executable(codeforces_1674_B codeforces_1674_B.cpp)
add_executable(2022A H.cpp)
add_executable(P P.cpp)
add_executable(N N.cpp)
add_executable(I I.cpp)
add_executable(A A.cpp)
add_executable(2022PreSummer_DS_K_2DSegTree 2022PreSummer_DS_K_2DSegTree.cpp)
add_executable(2022PreSummer_DP_Z_01bag 2022PreSummer_DP_Z_01bag.cpp)
add_executable(2022PreSummer_DP_O_multibag 2022PreSummer_DP_O_multibag.cpp)
add_executable(2022PreSummer_DP_LuanGao 2022PreSummer_DP_LuanGao.cpp)
add_executable(2022PreSummer_DP_L_LIS 2022PreSummer_DP_L_LIS.cpp)
add_executable(2022PreSummer_DP_B_GameTheory 2022PreSummer_DP_B_GameTheory.cpp)
add_executable(2022PreSummer_DP_A_LCS 2022PreSummer_DP_A_LCS.cpp)
add_executable(2022PreSummer_DP_H_dpOnTree 2022PreSummer_DP_H_dpOnTree.cpp)
add_executable(2022PreSummer_DP_H 2022PreSummer_DP_X_GongChuang1.cpp)
add_executable(2022PreSummer_DP_M_MWpermutation 2022PreSummer_DP_M_MWpermutation.cpp)
add_executable(codeforces_1684_A codeforces_1684_A.cpp)
add_executable(codeforces_1684_B codeforces_1684_B.cpp)
add_executable(codeforces_1684_C codeforces_1684_C.cpp)
add_executable(codeforces_1684_D codeforces_1684_D.cpp)
add_executable(2022PreSummer_DP_V_monotonosQueueDP 2022PreSummer_DP_V_monotonosQueueDP.cpp)
add_executable(2022PreSummer_DP_D_JHproblem 2022PreSummer_DP_D_JHproblem.cpp)
add_executable(2022PreSummer_DP_D_BruthForce 2022PreSummer_DP_D_BruthForce.cpp)
add_executable(random random.cpp)
add_executable(2022PreSummer_SS_manacher 2022PreSummer_SS_X_manacher.cpp)
add_executable(2022PreSummer_SS_kmp 2022PreSummer_SS_Q_kmp.cpp)
add_executable(2022PreSummer_SS_acAuto 2022PreSummer_SS_acAuto.cpp)
add_executable(2022PreSummer_IQ2_A 2022PreSummer_IQ2_A.cpp)
add_executable(2022PreSummer_IQ2_B 2022PreSummer_IQ2_B.cpp)
add_executable(2022_PreSummer_IQ2_C 2022_PreSummer_IQ2_C.cpp)
add_executable(2022PreSummer_IQ2_G_BF 2022PreSummer_IQ2_G_BF.cpp)
add_executable(2022PreSummer_IQ2_G_cs 2022PreSummer_IQ2_G_cs.cpp)
add_executable(codeforces_1681_A codeforces_1681_A.cpp)
add_executable(codeforces_1681_B codeforces_1681_B.cpp)
add_executable(codeforces_1681_C codeforces_1681_C.cpp)
add_executable(codeforces_1681_D codeforces_1681_D.cpp)
add_executable(2022PreSummer_SS_V_Cake 2022PreSummer_SS_V_InequalityPruneDFS.cpp)
add_executable(2022PreSummer_SS_R_ddjsDFS 2022PreSummer_SS_R_ddjsDFS.cpp)
add_executable(2022PreSummer_SS_G_ddjs 2022PreSummer_SS_G_ddjs.cpp)
add_executable(2022PreSummer_SS_W_ACautomaton 2022PreSummer_SS_W_ACautomaton.cpp)
add_executable(2022PreSummer_SS_S_memDFS 2022PreSummer_SS_S_memDFS.cpp)
add_executable(2022PreSummer_SS_C_SA 2022PreSummer_SS_C_SA.cpp)
add_executable(codeforces_1691_A codeforces_1691_A.cpp)
add_executable(codeforces_1691_B codeforces_1691_B.cpp)
add_executable(codeforces_1691_C codeforces_1691_C.cpp)
add_executable(codeforces_1691_D codeforces_1691_D.cpp)
add_executable(codeforces_1688_A codeforces_1688_A.cpp)
add_executable(codeforces_1688_B codeforces_1688_B.cpp)
add_executable(codeforces_1688_C codeforces_1688_C.cpp)
add_executable(codeforces_1688_D codeforces_1688_D.cpp)
add_executable(abc254_a abc254_a.cpp)
add_executable(abc254_b abc254_b.cpp)
add_executable(abc254_c abc254_c.cpp)
add_executable(abc254_d abc254_d.cpp)
add_executable(2022PreSummer_SS_H_PAM 2022PreSummer_SS_H_PAM.cpp)
add_executable(codeforces_1690_A codeforces_1690_A.cpp)
add_executable(codeforeces_1690_B codeforeces_1690_B.cpp)
add_executable(codeforces_1690_C codeforces_1690_C.cpp)
add_executable(codeforces_1690_D codeforces_1690_D.cpp)
add_executable(codeforces_1690_E codeforces_1690_E.cpp)
add_executable(2022PreSummer_SS_SuffixAutomaton 2022PreSummer_SS_SuffixAutomaton.cpp)
add_executable(codeforces_1697_A codeforces_1697_A.cpp)
add_executable(codeforces_1697_B codeforces_1697_B.cpp)
add_executable(codeforces_1697_C codeforces_1697_C.cpp)
add_executable(codeforces_1692_A codeforces_1692_A.cpp)
add_executable(codeforces_1692_B codeforces_1692_B.cpp)
add_executable(codeforces_1692_C codeforces_1692_C.cpp)
add_executable(codeforces_1692_D codeforces_1692_D.cpp)
add_executable(codeforces_1692_E codeforces_1692_E.cpp)
add_executable(codeforces_1692_f codeforces_1692_f.cpp)
add_executable(codeforces_1692_h codeforces_1692_h.cpp)